# xar

./: CMakeLists.txt  README.md  manifest.jso  manifest.json  tuned_manifest.json  usr_lib_bc_emulate.c  usr_lib_libxeno_wrapper.c
.github/workflows/: build.yml
include/: feature_dump.h  xeno_wrapper.h
src/: bc_emulate.c  feature_dump.c  feature_dump.h  feature_dump_generator.c  vulkan_wrapper.c  xeno_feature_dmp_generator.c  xeno_feature_dump_generator.c  xeno_wrapper.c
usr/share/vulkan/explicit_layer.d/: xclipse_debughud.json  xeno_debughud.json  xeno_explicit.json
usr/share/vulkan/icd.d/: xeno_icd.json  xeno_wrapper.json
usr/share/vulkan/implicit_layer.d/: xclipse_autotune.json  xclipse_debughd.json  xeno_layer.json  xeno_wrapper.json
